--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'org.example'
@@ -16,4 +17,25 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/revanthvijayakumar/GradleSample"
+            credentials {
+                username = "revanthvijayakumar"
+                password = "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"
+            }
+        }
+    }
+    publications {
+        register("jar", MavenPublication) {
+            from(components["java"])
+            pom {
+                url.set("https://github.com/<OWNER>/<REPO>.git")
+            }
+        }
+    }
 }
