--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,10 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = "https://maven.pkg.github.com/revanthvijayakumar/GradleSample"
+            url = "https://maven.pkg.github.com/revanthvijayakumar/gitpackage"
             credentials {
                 username = "revanthvijayakumar"
-//                password = "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"
+                password = "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"
             }
         }
     }
@@ -34,7 +34,7 @@ publishing {
         register("jar", MavenPublication) {
             from(components["java"])
             pom {
-                url.set("https://github.com/<OWNER>/<REPO>.git")
+                url.set("https://github.com/revanthvijayakumar/gitpackage.git")
             }
         }
     }
