--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,12 @@ publishing {
             }
         }
     }
+    publications {
+        register("jar", MavenPublication) {
+            from(components["java"])
+//            pom {
+//                url.set("https://github.com/revanthvijayakumar")
+//            }
+        }
+    }
 }
